flex/flex-tests/testData/js2_highlighting/GenerateConstructor2.js2
class B {
  function B(x:int, x2:int) {}
}

class <error descr="Missed superclass's constructor invocation">A</error> extends B {
  var i3:int;
  <caret>
}